Fixed CKEditor on mobile

--- a/job-posting/css/index.css
+++ b/job-posting/css/index.css
@@ -43,10 +43,6 @@
 	padding-top: 6%;
 }
 
-.modal-content {
-	width: 125%;
-	margin-left: -12.5%;
-}
 #modalJobTitle {
 	font-size: 2em;
 }
